--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask>=2.2.0
 
-
 torch>=1.13.0
 torchvision>=0.14.0
 transformers>=4.30.0
@@ -9,9 +8,5 @@ numpy>=1.21.0
 Pillow>=9.0.0
 opencv-python>=4.5.0
 
-
-# 测试
-pytest
-
-# render部署
+# Deployment with Gunicorn
 gunicorn
